# hildie-python-monorepo

./: .bazelrc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  BUILD.bazel  README.md  pyproject.toml  requirements_docs_lock.txt  requirements_lock.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: bazel.yml  docs.yml  publish.yml
docs/: BUILD.bazel  lock_requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst  packages.rst
docs/source/_static/: .gitkeep
src/hildie/: __init__.py  _version.py
tools/: BUILD.bazel  hildie.bzl  package_tests.bzl  pytest.bzl  update_version.py
