"""Root BUILD file for Hildie monorepo."""

load("@rules_python//python:defs.bzl", "py_library")

# Root hildie namespace package
py_library(
    name = "hildie",
    srcs = glob(["src/hildie/**/*.py"]),
    imports = ["src"],
    visibility = ["//visibility:public"],
)

# Convenience target to run all tests
test_suite(
    name = "all_tests",
    tests = [
        "//packages/my-library:tests",
        "//packages/my-app:tests",
        "//packages/my-cli:tests",
        "//packages/archive-git-forks:tests",
    ],
)
