[project]
name = "hildie"
version = "0.1.0"
description = "Hildie monorepo - collection of Python utilities and tools"
authors = [{name = "Clinton Steiner", email = "clintonsteiner@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click",
    "requests",
]

[project.urls]
Homepage = "https://github.com/clintonsteiner/python-monorepo"
Repository = "https://github.com/clintonsteiner/python-monorepo"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v"
testpaths = ["packages"]
python_files = ["test_*.py"]

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true
